--- a/mysql_master_slave/mysql_master/Dockerfile
+++ b/mysql_master_slave/mysql_master/Dockerfile
@@ -1,4 +1,4 @@
 FROM mysql:latest
 COPY my.cnf /etc/mysql/conf.d
-COPY create_sync_user.sh /docker-entrypoint-initdb.d/
+COPY master.sh /docker-entrypoint-initdb.d/
 CMD ["mysqld"]
